--- a/app/templates/main.hbs
+++ b/app/templates/main.hbs
@@ -6,6 +6,7 @@
       data=dashboardData
       records=records
       community_area=(mut community_area)
+      isLoading=isLoading
     }}
       {{!-- {{outlet}} --}}
     {{/dc-dashboard}}
