--- a/app/styles/custom/dashboard.scss
+++ b/app/styles/custom/dashboard.scss
@@ -1,7 +1,3 @@
-.dashboard {
-
-}
-
 .chart {
   text-align: center;
   & h3 {
@@ -11,4 +7,24 @@
 
 .leaflet-container {
   height: 100%;
+}
+
+.table-wrapper {
+  overflow: scroll;
+  & .lt-row {
+    font-size: 14px;
+    line-height: 2;
+    border-bottom: 1px solid lightgrey;
+    &:hover {
+      background-color: lightgrey;
+    }
+    &.is-selected {
+      background-color: lightgrey;
+    }
+  }
+  & thead {
+    display: table-header-group;
+    vertical-align: middle;
+    border-color: inherit;
+  }
 }
